<resources>
    <string name="app_name">TTRPG_With_Me</string>

    <string name="character_select">Character Select</string>
    <string name="character_stats">Character Stats</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="class_stats">Class Stats</string>
    <string name="backpack">Backpack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="character_select_description">This should be a description of the page and what you\'re supposed do on it!</string>
    <string name="notes">Notes</string>

    <string name="placeholder_body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Consectetur adipiscing elit pellentesque habitant morbi tristique senectus. Neque laoreet suspendisse interdum consectetur libero id.</string>
</resources>